# openclaw-session-grep

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/openclaw_session_grep/: __init__.py  cli.py  search.py
tests/: test_cli.py  test_search.py
tests/fixtures/: session-alpha.jsonl  session-beta.jsonl
